# kw-sdk

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EXTENSIONS.md  IDEAS.md  LICENSE  MAKING_OF.md  README.md  SDK_GUIDE.md  SHOW_HN.md  TOOL_CALLING_GUIDE.md  build.py  cli.py  pyproject.toml  test_sdk_output.md
examples/: README.md  cli_composition.sh  csv_research_and_calc.py  custom_mode_bizarro.py  docs_from_file.py  end_to_end_workflow.py  explore_mode.py  iterate_workflow.py  no_tools_needed.py  npi_iphone18.py  npi_iterate.py  plan_mode.py  plan_mode_no_rubric.py  plan_mode_writing_workflow.py  standard_mode.py  standard_with_rubric.py  standard_with_search.py  with_checkpointing.py  with_code_execution.py  with_custom_executor.py  with_file_artifact.py  with_files.py  with_memory.py  with_streaming.py
examples/artifacts/: annual_cost_projection.csv  npv_summary.csv  recommendation.csv  saas_benchmark.csv  vendor_comparison.csv  vendor_npv_analysis.xlsx
tests/: test_ask_user.py  test_async_harness_unit.py  test_checkpoint.py  test_explore_gemini.py  test_explore_oai.py  test_iterate.py  test_iterate_output.md  test_parallel_perf.py  test_plan_gemini.py  test_plan_no_rubric.py  test_plan_openai.py  test_providers.py  test_run.py  test_sdk.py  test_sdk_openai.py  test_streaming.py  test_streaming_anthropic.py  test_streaming_async_gemini.py  test_streaming_async_openai.py  test_streaming_full.py  test_streaming_openai.py  test_streaming_raw.py  test_w_file.py
verif/: README.md  __init__.py  config.py  executor.py  harness.py  modes.py  prompts.py
(+39 files in other folders)
